[package]
name = "RTABC"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.17.3"

eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
local-ip-address = "0.6.10"
ringbuf = "0.4.8"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full", "macros", "net", "rt-multi-thread", "time"] }
windows = { version = "0.62.2", features = ["Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant"] }
